--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^5.8.29",
     "babel-core": "^5.8.29",
     "babel-loader": "^5.3.2",
+    "history": "^1.17.0",
     "immstruct": "^2.0.0",
     "immutable": "^3.7.6",
     "immutablediff": "^0.4.2",
@@ -22,12 +23,15 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.3",
+    "react-router": "^1.0.3",
     "redux": "^3.0.5",
+    "redux-simple-router": "^1.0.2",
     "redux-thunk": "^1.0.2",
     "webpack": "^1.12.9"
   },
   "devDependencies": {
     "body-parser": "^1.14.1",
+    "ejs": "^2.3.4",
     "express": "^4.13.3",
     "webpack": "^1.12.6",
     "webpack-dev-middleware": "^1.2.0",
